--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,20 @@ dependencies {
     def work_version = "2.3.1"
     implementation "androidx.work:work-runtime:$work_version"
     implementation "androidx.concurrent:concurrent-futures:1.0.0"
+
+    //for testing with UI
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha01'
+    implementation 'com.android.support:cardview-v7:29.0.0'
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+    androidTestImplementation "android.arch.persistence.room:testing:1.1.1"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
+    implementation 'com.facebook.stetho:stetho:1.5.1'
+
+    //for performance
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.2'
+
+
+
 }
